--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -465,6 +465,7 @@
     <ClInclude Include="..\..\..\sonia\utility\linked_buffers.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\lua\bigint_lib.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\lua\lua.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\lua\sonia_lib.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\lua\variant_lib.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\marshaling\span.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\marshaling\marshaling.hpp" />
@@ -802,6 +803,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\utility\lua\bigint_lib.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\lua\lua.cpp" />
+    <ClCompile Include="..\..\..\sonia\utility\lua\sonia_lib.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\lua\variant_lib.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\mvvm\lua_view_model.cpp" />
     <ClCompile Include="..\..\..\sonia\utility\mvvm\view_model.cpp" />
